# SPS_CATRiNA_EventBuilder

./: CMakeLists.txt  README.md  RefreshBuild.sh
etc/: SPSCAT_input.txt  X1_events_cut.csv
etc/2022_05_10B_3Hea_gwm17/: ChannelMap_Jan2023.txt  gwm_input.txt
etc/2023_01_2023_9Be_6Lid/: CutList_9Be_6Li_ES.txt  CutList_9Be_6Li_d.txt  CutList_9Be_6Li_d_22deg.txt  input_Esparza_mod.txt
etc/2023_01_9Be_6Lid/: CutList_9Be_6Li_d_12deg.txt  CutList_9Be_6Li_d_17deg.txt  CutList_9Be_6Li_d_22deg.txt  CutList_9Be_6Li_d_28deg.txt
etc/OldCutLists/: CutList_9Be_6Li_ES.txt  CutList_9Be_6Li_d_12deg.txt  CutList_9Be_6Li_d_17deg.txt  CutList_9Be_6Li_d_28deg.txt  CutList_9Be_6Li_d_ES.txt
etc/OldInputs/: input_Esparza  input_Esparza_mod.txt
src/evb/: CMakeLists.txt  CompassFile.cpp  CompassRun.cpp  CutHandler.cpp  EVBApp.cpp  EVBParameters.h  FP_kinematics.cpp  FP_kinematics.h  Logger.cpp  Logger.h  SFPAnalyzer.cpp  SFPAnalyzer.h  SFPPlotter.cpp  SFPPlotter.h  ShiftMap.cpp  SlowSort.cpp  SlowSort.h
src/guidict/: EVBMainFrame.cpp  EVBMainFrame.h
src/spsdict/: DataStructs.h
